Fixed the dropdown menu to be a solid color with readable text

--- a/SportsFacility/main.css
+++ b/SportsFacility/main.css
@@ -505,13 +505,15 @@ DropDown & list items
 .dropdown {
     position: relative;
     display: inline-block;
-    opacity: 0.6;
+    opacity: 1.0;
+    color: white;
+
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: black;
+    background-color: white;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
@@ -523,6 +525,7 @@ DropDown & list items
 
 .dropdown:hover .dropdown-content {
     display: block;
+    background-color: #766151;
 }
 
 
@@ -532,6 +535,10 @@ DropDown & list items
     color: black;
 
 
+}
+
+.dropdown-menu>li>a {
+    color: white;
 }
 
 .dropdown-header {
@@ -691,7 +698,7 @@ Buttons
 .button1 {
     background-color: #514947;
     color: #FFFFFF;
-    border: 1px solid #48372F;
+    border: 1px solid #FEE202;
 }
 
 .button1:hover {
@@ -784,7 +791,7 @@ Drop down button for settings
 ******************************/
 
 .dropbtn {
-    background-color: #FFFFFF;
+    background-color: white;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -796,12 +803,16 @@ Drop down button for settings
 .dropdown {
     position: relative;
     display: inline-block;
+    color: white;
 }
 
 .dropdown-menu {
+    color: #ffffff;
+    background-color: #514947;
 
-    color: black;
-    opacity: 0.7;
+
+
+
 }
 
 .dropdown-toggle {
@@ -814,7 +825,7 @@ Drop down button for settings
 }
 
 .dropdown-content a {
-    color: black;
+    color: #766151;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -822,7 +833,7 @@ Drop down button for settings
 
 
 .dropdown-content a:hover {
-    background-color: #f1f1f1
+    background-color: #766151;
 }
 
 
@@ -833,6 +844,11 @@ Drop down button for settings
 .dropdown:hover .dropbtn {
     background-color: #766151;
 }
+
+ul li {
+    color: white;
+}
+
 
 /*************************************
 Dropdown toggle function
@@ -1166,8 +1182,8 @@ Video Page Style
 }
 
 .w3-display-container mySlides {
-    height: 300px;
-    width: 100%;
+    background-size: contain;
+
 }
 
 .containertext {
